[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "jobquest"
version = "0.1.2"
description = "Stealth job scraper for LinkedIn, Indeed & Glassdoor — powered by Scrapling"
authors = ["Alwin Paul <alwin.paulpv@gmail.com>"]
readme = "README.md"
license = "MIT"
keywords = ["jobs", "scraper", "linkedin", "indeed", "glassdoor", "stealth", "scrapling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[[tool.poetry.packages]]
include = "jobquest"

[tool.poetry.dependencies]
python = "^3.10"
requests = ">=2.31.0"
beautifulsoup4 = ">=4.12.2"
pandas = ">=2.1.0"
numpy = ">=1.26.0"
pydantic = ">=2.3.0"
tls-client = ">=1.0.1"
markdownify = ">=0.14.0"
regex = ">=2024.4.28"
scrapling = ">=0.2"
curl-cffi = ">=0.7"
browserforge = ">=1.0"
patchright = ">=1.0"
playwright = ">=1.40"
msgspec = ">=0.18"
